# text-to-sql-practice

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup_db.py
db/: setup_demo.sql
implements/: P03_router.py  P04_preprocessor.py  P05_context_retriever.py  P05_metadata.yml  P06_prompt.yml  __init__.py
results/: R03.md  R04.md
shared/: __init__.py  chat_model.py  constants.py  embed_model.py  identity_prompt.yml  messages.py  sql_executor.py  utils.py
tests/: T03_router.py  T04_preprocessor.py  T05_context_retriever.py  conftest.py  test_data.py
